--- a/views/admin/analytics.hbs
+++ b/views/admin/analytics.hbs
@@ -4,7 +4,7 @@
   </div>
 </div>
 <div class="row">
-  <div class="col-xs-6">
+  <div class="col-sm-6">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="center-form">Summary Statistics</h4>
@@ -36,7 +36,7 @@
       </div>
     </div>
   </div>
-  <div class="col-xs-6">
+  <div class="col-sm-6">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="center-form">Revenue by State</h4>
@@ -61,7 +61,7 @@
 
 </div>
 <div class="row">
-  <div class="col-xs-6">
+  <div class="col-sm-6">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="center-form">Revenue by Product</h4>
@@ -83,7 +83,7 @@
     </div>
 
   </div>
-  <div class="col-xs-6">
+  <div class="col-sm-6">
     <div class="panel panel-default">
       <div class="panel-heading">
         <h4 class="center-form">Revenue by Category</h4>
