--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -76,7 +76,7 @@
 <div class="row">
 	{{#each products as |product|}}
 		<div class="col-md-4">
-			<img src="image_{{product.sku}}">
+			<img src="{{product.imagePath}}" height="100px" class="img-thumbnail">
 			<p>${{product.price}}.00</p>
 			<p>{{product.name}}</p>
 			<p>{{product.Category.name}}</p>
