--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -64,10 +64,25 @@
 		<div class="col-md-2">
 			<button class="btn btn-primary">Submit Filter</button>
 		</div>
-	</form>
-	
-	<form>
 
+	</form>
+
+	<form class='form-group'>
+		<div class='row form-group'>
+			<div class="col-md-4 col-md-offset-3">
+				<select name="sortBy" class="form-control">
+					<option value='NameAsc'>Sort By Name Ascending</option>
+					<option value="nameDsc">Sort By Name Descending</option>
+					<option value="PriceAsc">Sort By Price Ascending</option>
+					<option value="PriceDESC">Sort By Price Descending</option>
+					<option value="new">Sort By Newest First</option>
+					<option value="old">Sort By Oldest First</option>
+				</select>
+			</div>
+			<div class="col-md-2">
+				<button class="btn btn-primary">Submit Filter</button>
+			</div>
+		</div>
 	</form>
 </div>
 
