--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -1,50 +1,45 @@
 
 
 <header class="page-header">
-  <h1>Users</h1>
-  <a href="/users/new" class="btn btn-primary">+ New User</a>
+  <h1>Products</h1>
 </header>
 
 
-{{#if users.length }}
+{{#if products.length }}
   <table class="table">
     <thead>
       <tr>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Username</th>
-        <th>Email</th>
-        <th></th>
+        <th>Name</th>
+        <th>Category</th>
+        <th>Price</th>
         <th></th>
       </tr>
     </thead>
     <tbody>
-      {{#each users as |user| }}
+      {{#each products as |product| }}
         <tr>
           <td>
-            <a href="/users/{{ user.id }}">{{ user.fname }}</a>
+            <a href="{{ productPath product.id }}">{{ product.name }}</a>
           </td>
           <td>
-            <a href="/users/{{ user.id }}">{{ user.lname }}</a>
+            <a href="{{ productPath product.id }}">{{ product.category }}</a>
           </td>
           <td>
-            <a href="/users/{{ user.id }}">{{ user.username }}</a>
+            <a href="{{ productPath product.id }}">{{ product.price }}</a>
           </td>
+      
+  
           <td>
-            <a href="/users/{{ user.id }}">{{ user.email }}</a>
-          </td>
-          <td>
-            <a href="/users/{{ user.id }}/edit">Edit</a>
-          </td>
-          <td>
-            <a href="/users/{{ user.id }}?_method=delete" class="text-danger">Delete</a>
+
+            <a href="{{ addProductPath product.id }}">
+            <button class="btn btn-primary">Add to Cart</button></a>
           </td>
         </tr>
       {{/each }}
     </tbody>
   </table>
 {{else }}
-  <p class="text-danger">No users</p>
+  <p class="text-danger">No products</p>
 {{/if }}
 
 
