working on products page

--- a/views/partials/_filter.handlebars
+++ b/views/partials/_filter.handlebars
@@ -1,6 +1,6 @@
 <form id=class="form">
   <div class="form-group col-xs-3 col-xs-offset-1">
-		<select class="form-control" name="filter[categoryId]">
+		<select class="form-control" name="refine[filter][categoryId]">
       <option value="0">
         Category
       </option>
@@ -10,7 +10,7 @@
 		</select>
   </div>
   <div class="form-group col-xs-3">
-    <select class="form-control" name="filter[minPrice]">
+    <select class="form-control" name="refine[filter][minPrice]">
       <option value="0">No Minimum Price</option>
       <option value="1">$100</option>
       <option value="2">$500</option>
@@ -20,7 +20,7 @@
     </select>
   </div>
   <div class="form-group col-xs-3">
-    <select class="form-control" name="filter[minPrice]">
+    <select class="form-control" name="refine[filter][minPrice]">
       <option value="0">No Maximum Price</option>
       <option value="1">$500</option>
       <option value="2">$1000</option>
@@ -29,5 +29,5 @@
       <option value="5">$10000</option>
     </select>
   </div>
-  <button type="submit" class="btn btn-default"></span>Search &nbsp;<span class="glyphicon glyphicon-search"></button>
+  <button type="submit" class="btn btn-primary"></span>Filter &nbsp;<span class="glyphicon glyphicon-filter"></button>
 </form>
