--- a/views/partials/_sort.handlebars
+++ b/views/partials/_sort.handlebars
@@ -1,33 +1,13 @@
-<nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <!-- Brand and toggle get grouped for better mobile display -->
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="/products">Mimir's Market</a>
-    </div>
-
-    <!-- Collect the nav links, forms, and other content for toggling -->
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="/products" class="btn-lg"><span class="glyphicon glyphicon-search" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Search Products"></span></a></li>
-        <li class="dropdown">
-          <a href="#" class="btn-lg dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span> <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
-          </ul>
-        </li>
-        <li><a href="/dashboard" class="btn-lg"><span class="glyphicon glyphicon-dashboard" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Dashboard"></span></a></li>
-        <li><a href="#" class="btn-lg"><span class="glyphicon glyphicon-equalizer" aria-hidden="true" data-toggle="tooltip" data-placement="bottom" title="Something?"></span></a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div><!-- /.container-fluid -->
-</nav>
+<form id=class="form">
+  <div class="form-group col-xs-3 col-xs-offset-4">
+    <select class="form-control" name="refine[sort]">
+      <option value="0">Sort results by</option>
+      <option value="1">Name ascending</option>
+      <option value="2">Price ascending</option>
+      <option value="3">Price descending</option>
+      <option value="4">Newest first</option>
+      <option value="5">Oldest first</option>
+    </select>
+  </div>
+  <button type="submit" class="btn btn-primary"></span>Sort &nbsp;<span class="glyphicon glyphicon-sort"></button>
+</form>
