--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -1,8 +1,26 @@
 <div class="row">
-	<div class="col-md-4">
+	<div class="col-md-3">
 		<img src="{{product.imagePath}}" height="100px" class="img-thumbnail">
+	</div>
+	<div class="col-md-2">
 		<p>${{product.price}}.00</p>
 		<p>{{product.name}}</p>
 		<p>{{product.Category.name}}</p>
 	</div>
+	<div class="col-md-7">
+		<p>{{product.description}}</p>
+		<button class="btn btn-large btn-primary">Add to Cart</button>
+	</div>
+</div>
+
+<div class="row">
+	{{#each relatedProducts as |rProduct|}}
+		<div class="col-md-4">
+			<img src="{{rProduct.imagePath}}" width="200px" class="img-thumbnail">
+			<p>${{rProduct.price}}.00</p>
+			<a href="/products/{{rProduct.id}}"><p>{{rProduct.name}}</p></a>
+			<p>{{rProduct.Category.name}}</p>
+			<button class="btn btn-large btn-primary">Add to Cart</button>
+		</div>
+	{{/each}}
 </div>
