--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -4,6 +4,12 @@
 
 <div class="panel panel-primary">
   <div class="panel-heading">
+    <form action='/products/search' method='POST' class="form-inline">
+      <div class="form-group">
+        <input class='form-control' type='text' placeholder="search" name='search'>
+        <button class="btn btn-info">GO!</button>
+      </div>
+    </form>
     <form class="form-inline sort-select">
       <div class="form-group">
         <select class="form-control" name="">
