--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -29,8 +29,8 @@
 
       <td>
 
-        <a href="{{ addProductPath product.id }}">
-            <button class="btn btn-primary">Add to Cart</button></a>
+        <a class="btn btn-primary" href="{{ addProductPath product.id }}">
+            Add to Cart</a>
       </td>
     </tr>
     {{/each }}
