--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -11,7 +11,10 @@
 </head>
 <body>
 	<header>
-		<h1>Mimir's Market</h1>
+		<nav class='navbar navbar-inverse'>
+			<h1><a href='/'>Mimir's Market</a></h1>
+		</nav>
+
 	</header>
 
 	<main class="container">
