--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -9,3 +9,9 @@ a {
 .well h3 {
 	margin-top: 0;
 }
+
+.mimir-bg {
+	background: url('../../images/landing_bg.jpg');
+	background-size: cover;
+	color: white;
+}
