--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,11 +1,15 @@
+<br /><br /><br /><br />
 
-<div class="jumbotron mimir-bg">
-  <h1>Jumbotron heading</h1>
-  <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-  <p><a class="btn btn-lg btn-success" href="#" role="button">Sign up today</a></p>
+<div class="row">
+  <div class="jumbotron mimir-bg">
+    <h1>Mimir's Market</h1>
+    <p class="lead">Welcome to my market, search for and purchase godly products at will.</p>
+    <p><a class="btn btn-lg btn-success" href="#" role="button">Enter the marketplace</a></p>
+  </div>
 </div>
 
-<div class="row marketing">
+
+<!-- <div class="row marketing">
   <div class="col-lg-6">
     <h4>Subheading</h4>
     <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
@@ -31,4 +35,4 @@
 
 <footer class="footer">
   <p>&copy; 2016 Company, Inc.</p>
-</footer>
+</footer> -->
