--- a/views/products/single.handlebars
+++ b/views/products/single.handlebars
@@ -1,11 +1,11 @@
 <header class="page-header">
-  <h1>Product: {{ product.name }}</h1>
+  <h1>{{ product.name }}</h1>
   Category: <a href="{{ categoryPath product.Category.id }}">{{ product.Category.name }}</a>
 </header>
 
 <div class="panel panel-primary">
   <div class="panel-body">
-    <p>{{ product.price }}</p>
+    <p>{{ product.prettyPrice }}</p>
     <p>{{ product.description}}</p>
     <a class="btn btn-primary" href="{{ addProductPath product.id }}">Add to Cart</a>
   </div>
@@ -16,22 +16,18 @@
   <thead>
     <tr>
       <th>Name</th>
-      <th>Category</th>
       <th>Price</th>
       <th></th>
     </tr>
   </thead>
   <tbody>
-    {{#each relatedProducts as |product| }}
+    {{#each product.Category.Products as |product| }}
     <tr>
       <td>
         <a href="{{ productPath product.id }}">{{ product.name }}</a>
       </td>
       <td>
-        <a href="{{ productPath product.id }}">{{ product.Category.name }}</a>
-      </td>
-      <td>
-        <a href="{{ productPath product.id }}">{{ product.price }}</a>
+        <a href="{{ productPath product.id }}">{{ product.prettyPrice }}</a>
       </td>
       <td>
         <a class="btn btn-primary" href="{{ addProductPath product.id }}">Add to Cart</a>
