--- a/views/layouts/main-no-nav.handlebars
+++ b/views/layouts/main-no-nav.handlebars
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 		<link rel="stylesheet" href="/styles/style.css" />
   </head>
-  <body>
+  <body class="landing-page-bg">
     <main class="container">
       {{{ body }}}
     </main>
