--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,12 +16,16 @@
     <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
 		<link rel="stylesheet" href="/styles/style.css" />
   </head>
-  <body>
+  <body class="page-bg">
 		<header>
 			{{>_navbar}}
 		</header>
-    <main class="container">
+    <main class="container page-container">
       {{{ body }}}
     </main>
+  
+    <footer class="page-footer">
+
+    </footer>
   </body>
 </html>
