--- a/views/landing.handlebars
+++ b/views/landing.handlebars
@@ -1,38 +1,13 @@
-<br /><br /><br /><br />
+<br /><br />
 
 <div class="row">
-  <div class="jumbotron mimir-bg">
+  <div class="jumbotron landing-header-bg">
     <h1>Mimir's Market</h1>
     <p class="lead">Welcome to my market, search for and purchase godly products at will.</p>
-    <p><a class="btn btn-lg btn-success" href="#" role="button">Enter the marketplace</a></p>
+    <p><a class="btn btn-lg btn-success" href="/products" role="button">Enter the marketplace</a></p>
   </div>
 </div>
 
-
-<!-- <div class="row marketing">
-  <div class="col-lg-6">
-    <h4>Subheading</h4>
-    <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-    <h4>Subheading</h4>
-    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-    <h4>Subheading</h4>
-    <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-  </div>
-
-  <div class="col-lg-6">
-    <h4>Subheading</h4>
-    <p>Donec id elit non mi porta gravida at eget metus. Maecenas faucibus mollis interdum.</p>
-
-    <h4>Subheading</h4>
-    <p>Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Cras mattis consectetur purus sit amet fermentum.</p>
-
-    <h4>Subheading</h4>
-    <p>Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-  </div>
-</div>
-
-<footer class="footer">
-  <p>&copy; 2016 Company, Inc.</p>
-</footer> -->
+<footer class="footer landing-page-footer">
+  <p class="text-center">&copy; 2017 Andrew Senner</p>
+</footer>
