--- a/views/partials/_navbar.handlebars
+++ b/views/partials/_navbar.handlebars
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-default">
+<nav class="navbar navbar-inverse page-nav">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
     <div class="navbar-header">
@@ -30,4 +30,17 @@
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
+
+  <div class="col-xs-12 well well-sm refine-well">
+    <h3 class="text-center">Refine your results</h3>
+    <div class="row">
+    {{>_search}}
+    </div>
+    <div class="row">
+    {{>_filter categories=categories}}
+    </div>
+    <div class="row">
+    {{>_sort}}
+    </div>
+  </div>
 </nav>
