--- a/views/partials/_product.handlebars
+++ b/views/partials/_product.handlebars
@@ -1,10 +1,10 @@
-<div class="col-xs-4">
-	<a href="#" class="thumbnail">
+<div class="col-xs-4 product-container">
+	<a href="#" class="product thumbnail">
 		<img src="{{product.img}}" alt="{{product.name}}">
 	</a>
-	<div class="caption product-caption">
+	<div class="caption product product-caption">
 		<h4>{{product.name}} (S/N:{{product.sku}})</h4>
 		<p>{{product.desc}}</p>
+		<p class="text-center"><a href="#" class="btn btn-primary" role="button">Add to Cart</a></p>
 	</div>
-	<p class="text-center"><a href="#" class="btn btn-primary" role="button">Add to Cart</a></p>
 </div>
