--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -1,30 +1,19 @@
-
-<div class="well">
-  <h3 class="text-center">Refine your results</h3>
-  <div class="row">
-  {{>_search}}
-  </div>
-  <div class="row">
-  {{>_filter categories=categories}}
-  </div>
-  <div class="row">
-  {{>_sort}}
+<div class="row products-container">
+  <!-- <header class="page-header">
+    <h1>Products</h1>
+    <a href="/products/new" class="btn btn-primary">+ New Product</a>
+  </header> -->
+  <div class="col-xs-12 products-list">
+    {{#if products.length }}
+      {{#each products as |productGroup| }}
+        <div class="row">
+        {{#each productGroup as |product|}}
+          {{>_product product=product}}
+        {{/each}}
+        </div>
+      {{/each }}
+    {{else }}
+      <p class="text-danger">No products</p>
+    {{/if }}
   </div>
 </div>
-
-<!-- <header class="page-header">
-  <h1>Products</h1>
-  <a href="/products/new" class="btn btn-primary">+ New Product</a>
-</header> -->
-
-{{#if products.length }}
-  {{#each products as |productGroup| }}
-    <div class="row">
-    {{#each productGroup as |product|}}
-      {{>_product product=product}}
-    {{/each}}
-    </div>
-  {{/each }}
-{{else }}
-  <p class="text-danger">No products</p>
-{{/if }}
