--- a/views/shared/_nav.handlebars
+++ b/views/shared/_nav.handlebars
@@ -18,9 +18,8 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Menu <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            {{!--
-            <li><a href="{{ usersPath }}">Users</a></li>
-            <li><a href="{{ postsPath }}">Posts</a></li> --}}
+            <li><a href="{{ productsPath }}">Products</a></li>
+            <li><a href="{{ categoriesPath }}">Categories</a></li>
           </ul>
         </li>
       </ul>
