--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,5 @@
 <div class="row">
-	<form>
+	<form action='/' method='get'>
 		<div class="form-group col-md-6 col-md-offset-2">
 			<label for="search">Search</label>
 			<input type="text" name="search" class="form-control">
@@ -12,7 +12,7 @@
 </div>
 
 <div class="row">
-	<form action="/filter" method="get">
+	<form action="/" method="get">
 		<div class="col-md-2 col-md-offset-2">
 			<select name="category" class="form-control">
 				<option value=''>Select a Category</option>
@@ -61,14 +61,14 @@
 
 	</form>
 
-	<form class='form-group'>
+	<form method='get' action='/'>
 		<div class='row form-group'>
 			<div class="col-md-4 col-md-offset-3">
 				<select name="sortBy" class="form-control">
-					<option value='NameAsc'>Sort By Name Ascending</option>
-					<option value="nameDsc">Sort By Name Descending</option>
-					<option value="PriceAsc">Sort By Price Ascending</option>
-					<option value="PriceDESC">Sort By Price Descending</option>
+					<option value='name'>Sort By Name Ascending</option>
+					<option value="name,DESC">Sort By Name Descending</option>
+					<option value="price">Sort By Price Ascending</option>
+					<option value="price,DESC">Sort By Price Descending</option>
 					<option value="new">Sort By Newest First</option>
 					<option value="old">Sort By Oldest First</option>
 				</select>
