--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -1,6 +1,6 @@
 <div class="row">
 	<div class="col-md-3">
-		<img src="{{product.imagePath}}" height="100px" class="img-thumbnail">
+		<img src="/images/{{product.imagePath}}" height="100px" class="img-thumbnail">
 	</div>
 	<div class="col-md-2">
 		<p>${{product.price}}.00</p>
@@ -16,7 +16,7 @@
 <div class="row">
 	{{#each relatedProducts as |rProduct|}}
 		<div class="col-md-4">
-			<img src="{{rProduct.imagePath}}" width="200px" class="img-thumbnail">
+			<img src="/images/{{rProduct.imagePath}}" width="200px" class="img-thumbnail">
 			<p>${{rProduct.price}}.00</p>
 			<a href="/products/{{rProduct.id}}"><p>{{rProduct.name}}</p></a>
 			<p>{{rProduct.Category.name}}</p>
