--- a/views/products/index.handlebars
+++ b/views/products/index.handlebars
@@ -5,27 +5,36 @@
 <form class="form-inline" action="{{ productsPath }}">
   <section class="form-group">
     <select name="category" id="category" class="form-control">
-      <option value="">Category</option>
+      <option value="all">Category</option>
       {{#each categories as |category|}}
       <option value="{{ category.id }}" {{#if category.selected }}selected{{/if}}>{{ category.name }}</option>
       {{/each}}
     </select>
-    <section class="form-group">
-      <select name="min" id="category" class="form-control">
+  </section>
+  <section class="form-group">
+    <select name="min" id="category" class="form-control">
       <option value="">Minimum</option>
-      {{#each priceRange as |price|}}
+      {{#each range as |price|}}
       <option value="{{ price.value }}" {{#if price.min }}selected{{/if}}>{{ price.pretty }}</option>
       {{/each}}
     </select>
-    </section>
-    <section class="form-group">
-      <select name="max" id="category" class="form-control">
+  </section>
+  <section class="form-group">
+    <select name="max" id="category" class="form-control">
       <option value="">Maximum</option>
-      {{#each priceRange as |price|}}
+      {{#each range as |price|}}
       <option value="{{ price.value }}" {{#if price.max }}selected{{/if}}>{{ price.pretty }}</option>
       {{/each}}
     </select>
-    </section>
+  </section>
+  <section class="form-group">
+    <select name="sort" id="category" class="form-control">
+      <option value="">Sort</option>
+      {{#each sorts as |sort|}}
+      <option value="{{ sort.value }}" {{#if sort.selected }}selected{{/if}}>{{ sort.name }}</option>
+      {{/each}}
+    </select>
+  </section>
   </section>
   <button class="btn btn-info">Filter</button>
   <a href="{{ productsPath }}" class="btn btn-default">Reset</a>
@@ -38,6 +47,7 @@
       <th>Name</th>
       <th>Category</th>
       <th>Price</th>
+      <th>Added</th>
       <th></th>
     </tr>
   </thead>
@@ -52,6 +62,9 @@
       </td>
       <td>
         {{ product.prettyPrice }}
+      </td>
+      <td>
+        {{ product.createdAt }}
       </td>
       <td>
         <a class="btn btn-primary" href="{{ addProductPath product.id }}">
