--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,19 +1,14 @@
-<div class="row">
-	<form>
-		<div class="form-group col-md-6 col-md-offset-2">
+<form action="/" method="get">
+
+	<div class="row">
+		<div class="form-group col-md-8 col-md-offset-2">
 			<label for="search">Search</label>
 			<input type="text" name="search" class="form-control">
 		</div>
+	</div>
 
-		<div class="col-md-2">
-			<button class="btn btn-primary">Search</button>
-		</div>
-	</form>
-</div>
-
-<div class="row">
-	<form action="/" method="get">
-		<div class="col-md-2 col-md-offset-2">
+	<div class="row">
+		<div class="col-md-2 col-md-offset-3">
 			<select name="category" class="form-control">
 				<option value=''>Select a Category</option>
 				{{#each categories as |category|}}
@@ -55,30 +50,29 @@
 				<option value="1000">$1000</option>
 			</select>
 		</div>
-		<div class="col-md-2">
-			<button class="btn btn-primary">Submit Filter</button>
-		</div>
+	</div>
 
-	</form>
-
-	<form class='form-group'>
-		<div class='row form-group'>
-			<div class="col-md-4 col-md-offset-3">
+	<div class="row">
+		<div class='form-group'>
+			<div class="col-md-4 col-md-offset-4">
 				<select name="sortBy" class="form-control">
-					<option value='NameAsc'>Sort By Name Ascending</option>
-					<option value="nameDsc">Sort By Name Descending</option>
-					<option value="PriceAsc">Sort By Price Ascending</option>
-					<option value="PriceDESC">Sort By Price Descending</option>
-					<option value="new">Sort By Newest First</option>
-					<option value="old">Sort By Oldest First</option>
+					<option value='name-ASC'>Sort By Name Ascending</option>
+					<option value="name-DESC">Sort By Name Descending</option>
+					<option value="price-ASC">Sort By Price Ascending</option>
+					<option value="price-DESC">Sort By Price Descending</option>
+					<option value="updated_at-DESC">Sort By Newest First</option>
+					<option value="update_at-ASC">Sort By Oldest First</option>
 				</select>
 			</div>
-			<div class="col-md-2">
-				<button class="btn btn-primary">Submit Filter</button>
-			</div>
 		</div>
-	</form>
-</div>
+	</div>
+	<div class="row">
+		<div class="col-md-2 col-md-offset-5">
+			<button class="btn btn-primary">Search/Filter</button>
+		</div>
+	</div>
+</form>
+
 
 <br><br><br>
 
