--- a/views/product.handlebars
+++ b/views/product.handlebars
@@ -13,6 +13,8 @@
 	</div>
 </div>
 
+<h2>Related Products</h2>
+
 <div class="row">
 	{{#each relatedProducts as |rProduct|}}
 		<div class="col-md-4">
